--- a/.github/workflows/zig_build_install.yml
+++ b/.github/workflows/zig_build_install.yml
@@ -29,3 +29,9 @@ jobs:
           version: 0.14.0
       - run: zig build install
 
+      - name: Upload zig_out as artifact (optional)
+        uses: actions/upload-artifact@v4
+        with:
+          name: zig-out
+          path: zig_out
+
