--- a/.github/workflows/zig_build_install.yml
+++ b/.github/workflows/zig_build_install.yml
@@ -27,7 +27,10 @@ jobs:
       - uses: mlugg/setup-zig@v2
         with:
           version: 0.14.0
-      - run: zig build install
+      - run: |
+             zig build install
+             pwd
+             ls
 
       - name: Upload zig_out as artifact (optional)
         uses: actions/upload-artifact@v4
