--- a/.github/workflows/zig_build_install.yml
+++ b/.github/workflows/zig_build_install.yml
@@ -21,7 +21,7 @@ on:
 jobs:
   install:
     runs-on: ubuntu-latest
-    name: Build and Install 
+    name: Build and Install
     steps:
       - uses: actions/checkout@v3
       - uses: mlugg/setup-zig@v2
@@ -35,6 +35,6 @@ jobs:
       - name: Upload zig_out as artifact (optional)
         uses: actions/upload-artifact@v4
         with:
-          name: zig-out
-          path: zig_out
+          name: zig_out
+          path: zig_out/
 
