--- a/.github/workflows/zig_build_install.yml
+++ b/.github/workflows/zig_build_install.yml
@@ -35,6 +35,6 @@ jobs:
       - name: Upload zig_out as artifact (optional)
         uses: actions/upload-artifact@v4
         with:
-          name: zig_out
-          path: zig_out/
+          name: zig-out
+          path: zig-out/
 
