--- a/.github/workflows/zig_build_install.yml
+++ b/.github/workflows/zig_build_install.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
     # Inputs the workflow accepts.
     inputs:
-      name: install_prefix
+      install_prefix:
         # Friendly description to be shown in the UI instead of 'name'
         description: 'Build reference file'
         # Default value if no value is explicitly provided
@@ -28,7 +28,7 @@ jobs:
         with:
           version: 0.14.0
       - run: |
-             echo "install_prefix: ${install_prefix}"
+             echo "install_prefix: ${{ inputs.install_prefix }}"
              zig build install
              pwd
              ls
